--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{{ url_for('static_files', filename ='style.css') }}">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.1/min/dropzone.min.css">
+  <!-- <link rel="stylesheet" href="{{ url_for('static_files', filename ='style.css') }}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.1/min/dropzone.min.css"> -->
   <title>Document</title>
 </head>
 <body>
@@ -199,6 +199,6 @@
   <form action="{{ url_for('upload_files') }}" class="dropzone">
   </form>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.1/min/dropzone.min.js"></script>
-<script src="{{ url_for('static_files', filename ='main.js') }}"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.1/min/dropzone.min.js"></script>
+<script src="{{ url_for('static_files', filename ='main.js') }}"></script> -->
 </html>
