--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
     </div>
     
   </div>
-  <!-- <div class="wrapper" id="app">
+  <div class="wrapper" id="app">
     <audio src="{{ url_for('upload', filename = track.get('raw_name')) }} "></audio>
     <div class="player">
       <div class="player__top">
@@ -135,7 +135,7 @@
       </div>
       <div v-cloak></div>
     </div>
-  </div> -->
+  </div>
 
   <svg xmlns="http://www.w3.org/2000/svg" hidden xmlns:xlink="http://www.w3.org/1999/xlink">
     <defs>
