--- a/templates/index.html
+++ b/templates/index.html
@@ -34,53 +34,53 @@
   <div class="wrapper2" style="display: flex; max-width: 50%; margin-left: 25%;">
     
     <div style="flex: 1;">
-      <div class="wrapper2 text">
-        <span>170Hz &nbsp; <span id = "metric1">0db</span></span>
+      <div class="wrapper2 text" style="display: flex; flex-direction: column;">
+        <span style="flex: 1;">170Hz &nbsp; </span><span style="flex: 1;" id = "metric1">0db</span>
       </div>
     </div>
     <div style="flex: 1;">
-      <div class="wrapper2 text">
-        <span>310Hz &nbsp; <span id = "metric2">0db</span></span>
+      <div class="wrapper2 text" style="display: flex; flex-direction: column;">
+        <span style="flex: 1;">310Hz &nbsp; </span><span style="flex: 1;" id = "metric2">0db</span>
       </div>
     </div>
     <div style="flex: 1;">
-      <div class="wrapper2 text">
-        <span>600Hz &nbsp; <span id = "metric3">0db</span></span>
+      <div class="wrapper2 text" style="display: flex; flex-direction: column;">
+        <span style="flex: 1;">600Hz &nbsp; </span><span style="flex: 1;" id = "metric3">0db</span>
       </div>
     </div>
     <div style="flex: 1;">
-      <div class="wrapper2 text">
-        <span>1000Hz &nbsp; <span id = "metric4">0db</span></span>
+      <div class="wrapper2 text" style="display: flex; flex-direction: column;">
+        <span style="flex: 1;">1000Hz &nbsp; </span><span style="flex: 1;" id = "metric4">0db</span>
       </div>
     </div>
     <div style="flex: 1;">
-      <div class="wrapper2 text">
-        <span>3000Hz &nbsp; <span id = "metric5">0db</span></span>
+      <div class="wrapper2 text" style="display: flex; flex-direction: column;">
+        <span style="flex: 1;">3000Hz &nbsp; </span><span style="flex: 1;" id = "metric5">0db</span>
       </div>
     </div>
     <div style="flex: 1;">
-      <div class="wrapper2 text">
-        <span>6000Hz &nbsp; <span id = "metric6">0db</span></span>
+      <div class="wrapper2 text" style="display: flex; flex-direction: column;">
+        <span style="flex: 1;">6000Hz &nbsp; </span><span style="flex: 1;" id = "metric6">0db</span>
       </div>
     </div>
     <div style="flex: 1;">
-      <div class="wrapper2 text">
-        <span>12000Hz &nbsp; <span id = "metric7">0db</span></span>
+      <div class="wrapper2 text" style="display: flex; flex-direction: column;">
+        <span style="flex: 1;">12000Hz &nbsp; </span><span style="flex: 1;" id = "metric7">0db</span>
       </div>
     </div>
     <div style="flex: 1;">
-      <div class="wrapper2 text">
-        <span>14000Hz &nbsp; <span id = "metric8">0db</span></span>
+      <div class="wrapper2 text" style="display: flex; flex-direction: column;">
+        <span style="flex: 1;">14000Hz &nbsp; </span><span style="flex: 1;" id = "metric8">0db</span>
       </div>
     </div>
     <div style="flex: 1;">
-      <div class="wrapper2 text">
-        <span>16000Hz &nbsp; <span id = "metric9">0db</span></span>
+      <div class="wrapper2 text" style="display: flex; flex-direction: column;">
+        <span style="flex: 1;">16000Hz &nbsp; </span><span style="flex: 1;" id = "metric9">0db</span>
       </div>
     </div>
     <div style="flex: 1;">
-      <div class="wrapper2 text">
-        <span>60Hz &nbsp; <span id= "metric10">  0db</span></span>
+      <div class="wrapper2 text" style="display: flex; flex-direction: column;">
+        <span style="flex: 1;">60Hz &nbsp; </span><span style="flex: 1;" id = "metric10">0db</span>
       </div>
     </div>
     
